--- a/HTML CSS Javascript/Basic Html Tags.html
+++ b/HTML CSS Javascript/Basic Html Tags.html
@@ -29,10 +29,13 @@
 
         <!-- The Line Break element. The <br> HTML element produces a line break 
             in text (carriage-return)...-->
-        <br>
-        <br>
 
-        <hr>
+        <!-- List of self closing tags : http://xahlee.info/js/html5_non-closing_tag.html -->
+
+        <br/>
+        <br/>
+
+        <hr/>
         <div>This is a div tag in between 2 hr tags ...</div>
         <hr>
   </body>
