--- a/HTML CSS Javascript/Empty Html Elements.html
+++ b/HTML CSS Javascript/Empty Html Elements.html
@@ -7,12 +7,14 @@
     <title>Clarusway</title>
   </head>
   <body>
+    <!-- Demonstrate the "Format Document" here that it corrects the self closing tags <br> to <br/> -->
+    <!-- List of self closing tags : http://xahlee.info/js/html5_non-closing_tag.html -->
     <h1>Empty HTML Elements</h1>
     <!-- br tag is an empty html element, no closing tag -->
-    <br>
+    <br />
     <!-- hr tag is an empty html element as well, no closing tag  -->
-    <hr>
-    <!-- Img tag is another empty html element, no closing tag  --> 
-    <img src="https://i.ytimg.com/vi/cqyziA30whE/maxresdefault.jpg">
+    <hr />
+    <!-- Img tag is another empty html element, no closing tag  -->
+    <img src="https://i.ytimg.com/vi/cqyziA30whE/maxresdefault.jpg" />
   </body>
 </html>
