--- a/HTML CSS Javascript/Apply Style on heading.html
+++ b/HTML CSS Javascript/Apply Style on heading.html
@@ -9,6 +9,7 @@
     <h1>H1 heading</h1>
     <h2>H2 heading</h2>
     <h3>H3 heading</h3>
+    <!-- This is inline styling ... -->
     <h4 style="font-size: 500%">H4 heading</h4>
     <h5>H5 heading</h5>
     <h6>H6 heading</h6>
