CSS ID Selector

--- a/HTML CSS Javascript/CSS_ID_Selector.html
+++ b/HTML CSS Javascript/CSS_ID_Selector.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clarusway</title>   
-    <style>
-        body {
-            background-color: rgb(236, 234, 219)
-        }
-        p {
+    <style>       
+        #mainParagraph {
             color: rgb(31, 115, 141);
             text-align: center;
             font-size:400%;            
@@ -16,9 +13,9 @@
     </style>
   </head>
   <body>    
-    <p>CSS Element Selector</p>
+    <p id="mainParagraph">CSS ID Selector</p>
   </body>
 </html>
 
 
-<!-- Please implement the CSS Element selector by using an external CSS file.  -->
+<!-- Please implement the CSS ID selector by using an external CSS file.  -->
