--- a/HTML CSS Javascript/CSS_Margin_Shorthand.html
+++ b/HTML CSS Javascript/CSS_Margin_Shorthand.html
@@ -19,7 +19,9 @@
             /* Instead of defining the margin attributes individually as above
                we can use the shorthand property for margin attribute as well:
             */
-            margin: 50px 200px 50px 0px;   
+            margin: 50px 200px 50px 0px; 
+            /*margin: 50px 200px 150px; */ /* Top margin, right and left, bottom margin */
+            /*margin: 50px 200px;*/  /* Top and Bottom, right and left */
         }
     </style>
   </head>
