--- a/HTML CSS Javascript/CSS_Padding_Property.html
+++ b/HTML CSS Javascript/CSS_Padding_Property.html
@@ -9,10 +9,19 @@
             border: 5px solid rgb(212, 68, 39);  /*This is the shorthand property defined here*/ 
             text-align: center;          
             padding-top: 200px;
-            padding-left: 100px;
+            padding-right: 100px;
             padding-bottom: 30px;
-            padding-left:20px;         
-        }       
+            padding-left:20px;    
+            
+            /* Is equal to defining like this */
+            /* padding: 200px 100px 30px 20px; */
+
+            /* 3 paddings defined here  */
+            /* padding: 200px 100px 30px */ /* Top, right and left, bottom
+         
+            /* 2 paddings defined here  */
+            /* padding: 200px 100px */ /* Top and bottom, right and left, bottom */
+          }       
     </style>
   </head>
   <body>   
