--- a/HTML CSS Javascript/CSS_Text_Attributes.html
+++ b/HTML CSS Javascript/CSS_Text_Attributes.html
@@ -9,7 +9,31 @@
         color: dodgerblue;
       }
       p {
-        color :red
+        color: red;
+      }
+
+      #par1 {
+        text-align: center;
+        text-decoration: overline;
+        text-transform: uppercase;
+        text-indent: 10px;
+        letter-spacing: 1px;
+      }
+
+      #par2 {
+        text-align: right;
+        text-decoration: line-through;
+        text-transform: lowercase;
+        text-indent: 30px;
+        letter-spacing: 3px;
+      }
+
+      #par3 {
+        text-align: justify;
+        text-decoration: underline;
+        text-transform: capitalize;
+        text-indent: 50px;
+        letter-spacing: 7px;
       }
     </style>
   </head>
@@ -17,5 +41,11 @@
   <body>
     <h1>This is the heading</h1>
     <p>This is a paragraph</p>
+
+    <p id="par1">This is par1 paragraph.</p>
+    <p id="par2">This is par2 paragraph.</p>
+    <p id="par3">This is par3 paragraph.</p>
+
+    <!-- IMPORTANT : In order to demonstrate the text indentation, set all text aligns to justify -->
   </body>
 </html>
