--- a/HTML CSS Javascript/CSS_Text_Attributes.html
+++ b/HTML CSS Javascript/CSS_Text_Attributes.html
@@ -13,27 +13,30 @@
       }
 
       #par1 {
-        text-align: center;
+        text-align: justify;
         text-decoration: overline;
         text-transform: uppercase;
         text-indent: 10px;
         letter-spacing: 1px;
+        line-height: 1;
       }
 
       #par2 {
-        text-align: right;
+        text-align: center;
         text-decoration: line-through;
         text-transform: lowercase;
         text-indent: 30px;
         letter-spacing: 3px;
+        line-height: 1.5;
       }
 
       #par3 {
-        text-align: justify;
+        text-align: right;
         text-decoration: underline;
         text-transform: capitalize;
         text-indent: 50px;
         letter-spacing: 7px;
+        line-height: 5;
       }
     </style>
   </head>
@@ -47,5 +50,6 @@
     <p id="par3">This is par3 paragraph.</p>
 
     <!-- IMPORTANT : In order to demonstrate the text indentation, set all text aligns to justify -->
+    <!-- IMPORTANT : In order to demonstrate the line-height, set all aligns to justify -->
   </body>
 </html>
