--- a/HTML CSS Javascript/CSS_Text_Attributes.html
+++ b/HTML CSS Javascript/CSS_Text_Attributes.html
@@ -19,6 +19,7 @@
         text-indent: 10px;
         letter-spacing: 1px;
         line-height: 1;
+        direction: rtl;
       }
 
       #par2 {
