--- a/HTML CSS Javascript/Basic Paragraph.html
+++ b/HTML CSS Javascript/Basic Paragraph.html
@@ -5,7 +5,7 @@
     <title>The paragraph Demo</title>
   </head>
   <body>
-    <p>First paragraph.</p>
+    <p style="border: 1px solid">First paragraph.</p>
     <p>Second paragraph.</p>
     <p>Third paragraph.</p>
   </body>
