--- a/HTML CSS Javascript/Images.html
+++ b/HTML CSS Javascript/Images.html
@@ -9,25 +9,45 @@
 
     <body>            
        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5f/TomandJerryTitleCardc.jpg/220px-TomandJerryTitleCardc.jpg"
-       border="2px">   
+       border="20px">   
        <br>
        <img src="Map.jpg" alt="Map could not be loaded ..." 
        width="500" height="500">
+       <br>
         <!-- Images with relative links  -->
-       <img src="/images/html5.gif" alt="HTML5 Icon" style="width:128px;height:128px;">   
+       <img src="/images/html5.gif" alt="HTML5 Icon" 
+            style="width:128px;height:128px;">   
         <!-- Images as a link  -->
        <br>
         <a href="https://www.github.com">
-            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5f/TomandJerryTitleCardc.jpg/220px-TomandJerryTitleCardc.jpg" alt="HTML tutorial" style="width:42px;height:42px;">
+            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5f/TomandJerryTitleCardc.jpg/220px-TomandJerryTitleCardc.jpg" 
+            alt="The image could not be loaded, but Anchor is active"
+            width=""
+            style="width:12px;height:12px;">
         </a>
-        Image floating to left or right 
-        <p><img src="https://image.api.playstation.com/vulcan/img/rnd/202011/0714/vuF88yWPSnDfmFJVTyNJpVwW.png" 
-            alt="Smiley face" style="float:right;width:42px;height:42px;">
-            The image will float to the right of the text.</p>
         <br>
-        <p><img src="https://image.api.playstation.com/vulcan/img/rnd/202011/0714/vuF88yWPSnDfmFJVTyNJpVwW.png" 
+        <br>
+        <br>
+        <br>
+        <br>
+        Image floating to left or right 
+        <img>
+            <img src="https://image.api.playstation.com/vulcan/img/rnd/202011/0714/vuF88yWPSnDfmFJVTyNJpVwW.png" 
+            alt="Smiley face" style="float:right;width:42px;height:42px;">
+            The image will float to the right of the text.
+        </p>
+
+        <hr>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <p>
+            <img src="https://image.api.playstation.com/vulcan/img/rnd/202011/0714/vuF88yWPSnDfmFJVTyNJpVwW.png" 
             alt="Smiley face" style="float:left;width:42px;height:42px;">
-            The image will float to the left of the text.</p>
+            The image will float to the left of the text.
+        </p>
     </body>
 
 </html> 
