--- a/HTML CSS Javascript/Lists overview.html
+++ b/HTML CSS Javascript/Lists overview.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-
+  
   <body>
     <h2>An Unordered HTML List</h2>
 
-    <ul style="list-style-type: circle">
+    <ul style="list-style-type: square">
       <!-- circle disc square -->
-      <li value="100">Coffee</li>
+      <li>Coffee</li>
       <li>Tea</li>
       <li>Milk</li>
     </ul>
@@ -22,20 +22,23 @@
 
     <ol type="1">
       <!-- 1 a A i I start=40  -->
-      <li value="100">Coffee</li>
-      <li>Tea</li>
-      <li>Milk</li>
+      <li value="500">Coffee</li>
+      <li>Tea</li>  
+      <li>Milk</li>         
     </ol>
 
     <h2>A Description List</h2>
     <dl>
       <!-- dl has no attribs, style dt { display:block } could be applied -->
       <dt>Coffee</dt>
-      <dd>Coffee1</dd>
-      <dd>Coffee2</dd>
+        <dd>Coffee1</dd>
+        <dd>Coffee2</dd>
       <dt>Milk</dt>
-      <dd>- Cow Milk</dd>
-      <dd>- Goat Milk</dd>
+        <dd>- Cow Milk</dd>
+        <dd>- Goat Milk</dd>
+      <dt>Beer</dt>
+        <dd>- Light</dd>
+        <dd>- Tough</dd>
     </dl>
   </body>
 </html>
