--- a/HTML CSS Javascript/CSS_Box_Sizing.html
+++ b/HTML CSS Javascript/CSS_Box_Sizing.html
@@ -17,7 +17,7 @@
             height: 100px;  
             padding: 50px;
             border: 1px solid red;
-            box-sizing: border-box;
+            /*box-sizing: border-box;*/
           }   
     </style>
   </head>
