--- a/HTML CSS Javascript/Using anchor tag.html
+++ b/HTML CSS Javascript/Using anchor tag.html
@@ -6,28 +6,32 @@
     <title>Clarusway</title>
     <script>
         function displayAlert(){
+            
             alert("Javascript triggered by the anchor tag !!!")
-        }
-    </script>
+        }        
+    </script>    
   </head>
   <body>
         <!-- Hypertext reference  -->
         <h1>Using Anchor Tag</h1>
-        <a href="https://www.clarusway.com">Visit Clarusway.com!</a>
+        <a href="/authetication/login.html">Please login</a>
         <hr>
         <br>
 
         <!-- Anchor tag with image definition  -->
         <h1>Using Anchor Tag with image</h1>
         <a href="https://www.github.com">
-            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5f/TomandJerryTitleCardc.jpg/220px-TomandJerryTitleCardc.jpg" alt="HTML tutorial" style="width:42px;height:42px;">
+            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5f/TomandJerryTitleCardc.jpg/220px-TomandJerryTitleCardc.jpg" 
+            alt="HTML tutorial"
+            style="width:12px;height:12px;">
         </a>
         <hr>
         <br>
 
         <!-- Open link in a new browser window -->
         <h1>Using Anchor Tag - Open link in a new browser window</h1>
-        <a href="https://www.clarusway.com" target="_blank">Visit Clarusway.com!</a> 
+        <a href="https://www.clarusway.com" 
+        target="_blank">Visit Clarusway.com!</a> 
         <hr>
         <br>
 
