--- a/HTML CSS Javascript/Using IFrame.html
+++ b/HTML CSS Javascript/Using IFrame.html
@@ -20,7 +20,7 @@
   </iframe>
   <iframe
     style="visibility: visible; color: brown"
-    src="22 - FramedPage.html"
+    src="FramedPage.html"
     id="if1"
     width="100%"
     height="254"
