--- a/HTML CSS Javascript/Forms_Elements.html
+++ b/HTML CSS Javascript/Forms_Elements.html
@@ -47,7 +47,7 @@
 	<fieldset>
 		<legend>Get the Clarusway User ID:</legend>
 		<label for="fname">First name:</label><br>
-  	<input type="text" id="fname" name="fname" value="Clarusway"><br>
+  	<input type="text" id="fname" name="fname" placeholder="Clarusway" ><br>
   	<label for="lname">Last name:</label><br>
   	<input type="text" id="lname" name="lname" value="Test"><br><br>  
   </fieldset>
