--- a/HTML CSS Javascript/Meta_Usage.html
+++ b/HTML CSS Javascript/Meta_Usage.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Update the initial scale and display the difference. -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- The difference won't be visibly seen here ... -->
+    <meta name=”viewport” content=”width=device-width, height=device-height, 
+          initial-scale=1.0, user-scalable=yes, maximum-scale=5.0″ />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="description" content="Clarusway HTML and CSS session" />
     <meta name="author" content="John Wick" />
