--- a/HTML CSS Javascript/Borders.html
+++ b/HTML CSS Javascript/Borders.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clarusway</title>
+
+    
   </head>
 
   <body>
@@ -17,7 +19,8 @@
     <h1 style="text-align:center;border-style:outset;">Border Outset</h1>
     <h1 style="text-align:center;border-style:none;">Border None</h1>
     <h1 style="text-align:center;border-style:hidden;">Border Hidden</h1>
-    <h1 style="text-align:center;border-style:ridge dashed solid double;
-               border-width:10px 4px 12px 15px;">Border Ridge Dashed Solid Double</h1>
+    <h1 style="text-align:center;
+               border-style:ridge dashed solid double;
+               border-width:10px 4px 50px 40px;">Border Ridge Dashed Solid Double</h1>
   </body>
 </html>
