--- a/HTML CSS Javascript/CSS_ID_Selector.html
+++ b/HTML CSS Javascript/CSS_ID_Selector.html
@@ -6,14 +6,18 @@
     <title>Clarusway</title>   
     <style>       
         #mainParagraph {
-            color: rgb(31, 115, 141);
+            color: rgb(141, 92, 31);
             text-align: center;
             font-size:400%;            
         }
     </style>
   </head>
   <body>    
-    <p id="mainParagraph">CSS ID Selector</p>
+    <p id="mainParagraph" >CSS ID Selector</p>
+    <p>CSS ID Selector</p>
+    <p>CSS ID Selector</p>
+    <p>CSS ID Selector</p>
+
   </body>
 </html>
 
