--- a/HTML CSS Javascript/CSS_Text_Attributes.html
+++ b/HTML CSS Javascript/CSS_Text_Attributes.html
@@ -4,31 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clarusway</title>
-    <style>
-      h1 {
-        color: dodgerblue;
-      }
-      p {
-        color: red;
-      }
-
+    <style>      
+     
       #par1 {
-        text-align: justify;
+        text-align: justify;       
         text-decoration: overline;
         text-transform: uppercase;
         text-indent: 10px;
-        letter-spacing: 1px;
+        letter-spacing: 5px;
         line-height: 1;
-        direction: rtl;
+        direction: ltr;
       }
 
       #par2 {
+        /*
         text-align: center;
         text-decoration: line-through;
         text-transform: lowercase;
         text-indent: 30px;
         letter-spacing: 3px;
         line-height: 1.5;
+        */
+        text-shadow: 5px 5px #c25013;  
       }
 
       #par3 {
