--- a/HTML CSS Javascript/Colors.html
+++ b/HTML CSS Javascript/Colors.html
@@ -27,11 +27,11 @@
               <h3 style="text-align:center;color:#DE047B;font-size:300%">HTML Session</h3>
               <h3 style="text-align:center;color:#DEDA04;font-size:300%">HTML Session</h3>
               <br>
-              <h3 style="text-align:center;border:2px solid #9B9AFA;font-size:300%">HTML Session</h3>
-              <h3 style="text-align:center;border:2px solid #DE047B;font-size:300%">HTML Session</h3>
-              <h3 style="text-align:center;border:2px solid #DEDA04;font-size:300%">HTML Session</h3>
+              <h3 style="text-align:center;border:5px solid #9B9AFA;font-size:300%">HTML Session</h3>
+              <h3 style="text-align:center;border:7px ridge #DE047B;font-size:300%">HTML Session</h3>
+              <h3 style="text-align:center;border:6px double #DEDA04;font-size:300%">HTML Session</h3>
 
-              <h1 style="font-size:300%;background-color:hsla(9, 100%, 64%, 0);">hsla(9, 100%, 64%, 0)</h1>
+              <h1 style="font-size:300%;background-color:rgba(255, 99, 71, 0);">hsla(9, 100%, 64%, 0)</h1>
               <h1 style="font-size:300%;background-color:hsla(9, 100%, 64%, 0.2);">hsla(9, 100%, 64%, 0.2)</h1>
               <h1 style="font-size:300%;background-color:hsla(9, 100%, 64%, 0.4);">hsla(9, 100%, 64%, 0.4)</h1>
               <h1 style="font-size:300%;background-color:hsla(9, 100%, 64%, 0.6);">hsla(9, 100%, 64%, 0.6)</h1>
