--- a/HTML CSS Javascript/Forms_Elements.html
+++ b/HTML CSS Javascript/Forms_Elements.html
@@ -113,21 +113,21 @@
    <p style="color:#79B2FA;font-size:100%;"></p>EMail demonstration:</p>     
    <label for="email">Enter your email:</label>
    <input type="email" id="email" name="email">
-
-   <br>
-   <p style="color:#79B2FA;font-size:100%;"></p>Select your CV/Resume:</p>     
+   
+   <br/>  
+   <br/> 
    <label for="myfile">Select your resume:</label>
    <input type="file" id="myfile" name="myfile">
 
    <br>
-   <p style="color:#79B2FA;font-size:100%;"></p>Select the volume:</p>     
+   <br>   
    <label for="vol">Volume (between 0 and 50):</label>
    <input type="range" id="vol" name="vol" min="0" max="1000">
 
    <br>
    <p style="color:#79B2FA;font-size:100%;"></p>Search from files:</p>     
-   <label for="gsearch">Search your local drive:</label>
-   <input type="search" id="gsearch" name="gsearch">
+   <label for="driveSearch">Search your local drive:</label>
+   <input type="search" id="driveSearch" name="driveSearch">
 
    <br>
    <p style="color:#79B2FA;font-size:100%;"></p>Please type in your phone Nr:</p>    
