--- a/HTML CSS Javascript/Meta_Usage.html
+++ b/HTML CSS Javascript/Meta_Usage.html
@@ -7,9 +7,10 @@
           initial-scale=1.0, user-scalable=yes, maximum-scale=5.0″ />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="description" content="Clarusway HTML and CSS session" />
+    <meta name="DeviceNr1" content="IOT LoRa Gateway"
     <meta name="author" content="John Wick" />
     <!-- Refresh the page content  -->
-    <meta http-equiv="refresh" content="2" />
+    <meta http-equiv="refresh" content="600" />
     <title>HTML Meta Usage</title>
   </head>
   <body>
