--- a/HTML CSS Javascript/External_Css.html
+++ b/HTML CSS Javascript/External_Css.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clarusway</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">    
+    <link rel="stylesheet" type="text/css" href="Navbar.css">
+    <link rel="stylesheet" type="text/css" href="Topbar.css"> 
+    <link rel="stylesheet" type="text/css" href="Articles.css">
+    
   </head>
   <body>
     <!-- The highest priority -->
