--- a/Bootstrap/Bootstrap - borders_shadows.html
+++ b/Bootstrap/Bootstrap - borders_shadows.html
@@ -28,6 +28,8 @@
 
     <br><br>
 
+    <!-- Explain from the link : -->
+    <!-- https://getbootstrap.com/docs/4.0/utilities/spacing/ -->
     <div class="bg-light mt-2 p-4 border border-primary"></div>
     <div class="bg-light mt-2 p-4 border border-secondary"></div>
     <div class="bg-light mt-2 p-4 border border-success"></div>
