--- a/Bootstrap/Bootstrap - breakpoints.html
+++ b/Bootstrap/Bootstrap - breakpoints.html
@@ -43,7 +43,7 @@
         /* XX-Large Devives (xxl) */
         @media (min-width: 1400px) { 
             body {
-                background-color: blue;
+                background-color: yellow;
             }
          }
 
