--- a/Bootstrap/Bootstrap - basic table.html
+++ b/Bootstrap/Bootstrap - basic table.html
@@ -31,7 +31,7 @@
        More columns are needed to demonstrate this feature ...  
   -->
  
-  <table class="table table-light table-striped table-hover">
+  <table class="table table-warning table-striped table-hover">
     <thead>
       <tr>
         <th>Firstname</th>
