--- a/Bootstrap/Bootcamp Example/index.html
+++ b/Bootstrap/Bootcamp Example/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="UTF-8">  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -105,7 +104,7 @@
     </div>
   </section>
 
-  <section class="p-5 bg-dark text-light">
+  <section class="p-5 bg-warning text-light">
     <div class="container">
       <div class="row align-items-center justify-content-between">
         <div class="col-md p-5">
@@ -132,8 +131,6 @@
   <section class="p-5">
     <div class="container">
       <div class="row text-center g-4">
-
-
         <div class="col-12 col-lg-4">
           <div class="card text-dark shadow">
             <div class="card-body">
