--- a/HTML CSS Javascript/Javascript8.html
+++ b/HTML CSS Javascript/Javascript8.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Clarusway - JavaScript program to find Positive numbers, Negative numbers and Zeros of given numbers</title>
-    </head>
+  <head>
+    <title>
+      Clarusway - JavaScript program to find Positive numbers, Negative numbers
+      and Zeros of given numbers
+    </title>
+  </head>
 
-<body>
+  <body>
     <!-- We may not need any element from the document -->
-</body>
+  </body>
 
-        <script type="text/javascript">
-                var array = [5, 9, -4, 0, 2, 0, -25, 64, -45, 0 ];
-                var positive = 0, negative = 0, zero = 0;
-                for (var i = 0; i < 10; ++i)
-                {
-                if (array[i] > 0)
-                {
-                positive += 1;
-                }
-                else if(array[i] < 0)
-                {
-                negative += 1
-                }
-                else
-                {
-                zero+= 1;
-                }
-                }
-                document.write("Given numbers : "+ array+ "</br>");
-                document.write("Number of +ve numbers are: "+ positive+"</br>");
-                document.write("Number of -ve numbers are: "+ negative+"</br>");
-                document.write("Number of zeros numbers are: "+ zero);
-        </script>
+  <script type="text/javascript">
+    var array = [5, 9, -4, 0, 2, 0, -25, 64, -45, 0];
+    var positive = 0,
+      negative = 0,
+      zero = 0;
+    for (var i = 0; i < 10; ++i) {
+      if (array[i] > 0) {
+        positive += 1;
+      } else if (array[i] < 0) {
+        negative += 1;
+      } else {
+        zero += 1;
+      }
+    }
+    document.write("Given numbers : " + array + "</br>");
+    document.write("Number of positive numbers are: " + positive + "</br>");
+    document.write("Number of negative numbers are: " + negative + "</br>");
+    document.write("Number of zeros numbers are: " + zero);
+  </script>
 </html>
