--- a/HTML CSS Javascript/Tables_Striped.html
+++ b/HTML CSS Javascript/Tables_Striped.html
@@ -66,7 +66,7 @@
       </tr> 
       <tr>
         <td>1</td>
-        <td rowspan="2">USA</td>  
+        <td rowspan="3">USA</td>  
         <td>Torrey</td>
         <td style="text-align:center;">Halverson</td>
         <td>This is the additional information about customer</td>	  		  
@@ -77,10 +77,16 @@
         <td colspan="2">Kennings</td>        
       </tr>
       <tr>
-        <td>1</td>
-        <td rowspan="2">USA</td>  
+        <td>1</td>        
         <td>Jack</td>
         <td style="text-align:center;">Thompson</td>
+        <td>Customer Info</td>	  		  
+      </tr>
+      <tr>
+        <td>1</td> 
+        <td>Canada</td>         
+        <td>Larry</td>
+        <td style="text-align:center;">March</td>
         <td>Customer Info</td>	  		  
       </tr>
     </table>
