--- a/Bootstrap/Bootstrap - carousel-js.html
+++ b/Bootstrap/Bootstrap - carousel-js.html
@@ -56,7 +56,7 @@
       </a>
     </div>
 
-    <button class="btn btn-primary my-5" id="prev">Geri</button>
+    <button class="btn btn-primary my-5" id="prev">Back</button>
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script>
