--- a/HTML CSS Javascript/CSS Float.html
+++ b/HTML CSS Javascript/CSS Float.html
@@ -83,7 +83,7 @@
     <section>
       <nav>
         <ul>
-          <li><a href="#">Henry</a></li>
+          <li><a href="https://www.google.com">Henry</a></li>
           <li><a href="#">Torrey</a></li>
           <li><a href="#">Robert</a></li>
           <li><a href="#">Jack</a></li>
