--- a/HTML CSS Javascript/Forms.html
+++ b/HTML CSS Javascript/Forms.html
@@ -6,13 +6,14 @@
 
     <form action="/backend.php">
       <label for="fname">First Name:</label><br />
-      <input type="text" id="fname" name="fname" value="Sally" /><br />
+      <input type="text" id="fname" name="fname" placeholder="Please enter your name..." /><br />
       <label for="lname">Last Name:</label><br />
-      <input type="text" id="lname" name="lname" value="Trump" /><br /><br />
+      <input type="text" id="lname" name="lname" placeholder="Enter your last name.."/><br /><br />
       <label for="fname">Address:</label><br />
-      <input type="text" id="faddress" name="faddress" value="L.A." /><br />
-
+      <input type="text" id="faddress" name="faddress" placeholder="Your home address..." /><br />
+      <div id="myDiv">Display</div>
       <input type="submit" value="Submit" />
+      <input type="reset" value="Reset" />
     </form>
 
     <footer>
