--- a/HTML CSS Javascript/Using IFrame.html
+++ b/HTML CSS Javascript/Using IFrame.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html onload="document.getElementById('navbar').style.display='none'";" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,6 +18,7 @@
     allowfullscreen
   >
   </iframe>
+  
   <iframe
     style="visibility: visible; color: brown"
     src="FramedPage.html"
