--- a/HTML CSS Javascript/Forms_Elements.html
+++ b/HTML CSS Javascript/Forms_Elements.html
@@ -72,7 +72,10 @@
 	</select>
    <br>
    <br>
-   <textarea name="message" rows="10" cols="30">The dogs are the best friends of humans.</textarea>
+   <textarea name="message" rows="10" 
+   cols="30">The dogs are the best friends of humans.
+
+   </textarea>
 
    <br>
    <p style="color:#79B2FA;font-size:100%;"></p>Select the easiest to learn:</p>  
@@ -121,7 +124,7 @@
 
    <br>
    <br>   
-   <label for="vol">Volume (between 0 and 50):</label>
+   <label for="vol">Volume (between 0 and 1000):</label>
    <input type="range" id="vol" name="vol" min="0" max="1000">
 
    <br>
@@ -132,7 +135,7 @@
    <br>
    <p style="color:#79B2FA;font-size:100%;"></p>Please type in your phone Nr:</p>    
    <label for="phone">Number:</label>
-   <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+   <input type="tel" id="phone" name="phone">
   <br>
   <br>
   <hr>
