--- a/HTML CSS Javascript/Colors.html
+++ b/HTML CSS Javascript/Colors.html
@@ -1,49 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clarusway</title>   
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Clarusway</title>
+  </head>
 
-    <body>            
-              <h1 style="font-size:300%;background-color:#8b2424;">#404040</h1>
-              <h1 style="font-size:300%;background-color:#686868;">#686868</h1>
-              <h1 style="font-size:300%;background-color:#a0a0a0;">#a0a0a0</h1>
-              <h1 style="font-size:300%;background-color:#bebebe;">#bebebe</h1>
-              <h1 style="font-size:300%;background-color:#dcdcdc;">#dcdcdc</h1>
-              <h1 style="font-size:300%;background-color:#f8f8f8;">#f8f8f8</h1> 
+  <body>
+    <h1 style="font-weight: bold0%; background-color: #8b2424">#404040</h1>
+    <h1 style="font-weight: bold0%; background-color: #686868">#686868</h1>
+    <h1 style="font-weight: bold0%; background-color: #a0a0a0">#a0a0a0</h1>
+    <h1 style="font-weight: bold0%; background-color: #bebebe">#bebebe</h1>
+    <h1 style="font-weight: bold0%; background-color: #dcdcdc">#dcdcdc</h1>
+    <h1 style="font-weight: bold0%; background-color: #f8f8f8">#f8f8f8</h1>
 
-              <h1 style="text-align:center;color:Tomato;font-size:300%">Tomato color defined as a constant value</h1>
-              <p style="text-align:center;color:DodgerBlue;font-size:300%;">Lorem ipsum...</p>
-              <p style="text-align:center;color:MediumSeaGreen;font-size:300%">sed <i>diam</i> nonummy <em>nibh</em></p>
-              <br>
-              <h1 style="text-align:center;color:Tomato;font-size:300%">HTML Session</h1>
-              <h1 style="text-align:center;color:DodgerBlue;font-size:300%">HTML Session</h1>
-              <h1 style="text-align:center;color:Violet;font-size:300%">HTML Session</h1>
-              <br>
-              <h3 style="text-align:center;color:#9B9AFA;font-size:300%">HTML Session</h3>
-              <h3 style="text-align:center;color:#DE047B;font-size:300%">HTML Session</h3>
-              <h3 style="text-align:center;color:#DEDA04;font-size:300%">HTML Session</h3>
-              <br>
-              <h3 style="text-align:center;border:5px solid #9B9AFA;font-size:300%">HTML Session</h3>
-              <h3 style="text-align:center;border:7px ridge #DE047B;font-size:300%">HTML Session</h3>
-              <h3 style="text-align:center;border:6px double #DEDA04;font-size:300%">HTML Session</h3>
+    <h1 style="text-align: center; color: Tomato; font-weight: bold0%">
+      Tomato color defined as a constant value
+    </h1>
+    <p style="text-align: center; color: DodgerBlue; font-weight: bold0%">
+      Lorem ipsum...
+    </p>
+    <p style="text-align: center; color: MediumSeaGreen; font-weight: bold0%">
+      sed <i>diam</i> nonummy <em>nibh</em>
+    </p>
+    <br />
+    <h1 style="text-align: center; color: Tomato; font-weight: bold0%">
+      HTML Session
+    </h1>
+    <h1 style="text-align: center; color: DodgerBlue; font-weight: bold0%">
+      HTML Session
+    </h1>
+    <h1 style="text-align: center; color: Violet; font-weight: bold0%">
+      HTML Session
+    </h1>
+    <br />
+    <h3 style="text-align: center; color: #9b9afa; font-weight: bold0%">
+      HTML Session
+    </h3>
+    <h3 style="text-align: center; color: #de047b; font-weight: bold0%">
+      HTML Session
+    </h3>
+    <h3 style="text-align: center; color: #deda04; font-weight: bold0%">
+      HTML Session
+    </h3>
+    <br />
+    <h3
+      style="text-align: center; border: 5px solid #9b9afa; font-weight: bold0%"
+    >
+      HTML Session
+    </h3>
+    <h3
+      style="text-align: center; border: 7px ridge #de047b; font-weight: bold0%"
+    >
+      HTML Session
+    </h3>
+    <h3
+      style="
+        text-align: center;
+        border: 6px double #deda04;
+        font-weight: bold0%;
+      "
+    >
+      HTML Session
+    </h3>
 
-              <h1 style="font-size:300%;background-color:rgba(255, 99, 71, 0);">hsla(9, 100%, 64%, 0)</h1>
-              <h1 style="font-size:300%;background-color:hsla(9, 100%, 64%, 0.2);">hsla(9, 100%, 64%, 0.2)</h1>
-              <h1 style="font-size:300%;background-color:hsla(9, 100%, 64%, 0.4);">hsla(9, 100%, 64%, 0.4)</h1>
-              <h1 style="font-size:300%;background-color:hsla(9, 100%, 64%, 0.6);">hsla(9, 100%, 64%, 0.6)</h1>
-              <h1 style="font-size:300%;background-color:hsla(9, 100%, 64%, 0.8);">hsla(9, 100%, 64%, 0.8)</h1>
-              <h1 style="font-size:300%;background-color:hsla(9, 100%, 10%, 0.8);">hsla(9, 100%, 64%, 1)</h1>
+    <h1 style="font-weight: bold0%; background-color: rgba(255, 99, 71, 0)">
+      hsla(9, 100%, 64%, 0)
+    </h1>
+    <h1 style="font-weight: bold0%; background-color: hsla(9, 100%, 64%, 0.2)">
+      hsla(9, 100%, 64%, 0.2)
+    </h1>
+    <h1 style="font-weight: bold0%; background-color: hsla(9, 100%, 64%, 0.4)">
+      hsla(9, 100%, 64%, 0.4)
+    </h1>
+    <h1 style="font-weight: bold0%; background-color: hsla(9, 100%, 64%, 0.6)">
+      hsla(9, 100%, 64%, 0.6)
+    </h1>
+    <h1 style="font-weight: bold0%; background-color: hsla(9, 100%, 64%, 0.8)">
+      hsla(9, 100%, 64%, 0.8)
+    </h1>
+    <h1 style="font-weight: bold0%; background-color: hsla(9, 100%, 10%, 0.8)">
+      hsla(9, 100%, 64%, 1)
+    </h1>
 
-              <h1 style="font-size:300%;background-color:rgb(60, 60, 60);">rgb(60, 60, 60)</h1>
-              <h1 style="font-size:300%;background-color:rgb(100, 100, 100);">rgb(100, 100, 100)</h1>
-              <h1 style="font-size:300%;background-color:rgb(140, 140, 140);">rgb(140, 140, 140)</h1>
-              <h1 style="font-size:300%;background-color:rgb(180, 180, 180);">rgb(180, 180, 180)</h1>
-              <h1 style="font-size:300%;background-color:rgb(200, 200, 200);">rgb(200, 200, 200)</h1>
-              <h1 style="font-size:300%;background-color:rgb(240, 240, 240);">rgb(240, 240, 240)</h1>
-
-    </body>
-</html> 
+    <h1 style="font-weight: bold0%; background-color: rgb(60, 60, 60)">
+      rgb(60, 60, 60)
+    </h1>
+    <h1 style="font-weight: bold0%; background-color: rgb(100, 100, 100)">
+      rgb(100, 100, 100)
+    </h1>
+    <h1 style="font-weight: bold0%; background-color: rgb(140, 140, 140)">
+      rgb(140, 140, 140)
+    </h1>
+    <h1 style="font-weight: bold0%; background-color: rgb(180, 180, 180)">
+      rgb(180, 180, 180)
+    </h1>
+    <h1 style="font-weight: bold0%; background-color: rgb(200, 200, 200)">
+      rgb(200, 200, 200)
+    </h1>
+    <h1 style="font-weight: bold0%; background-color: rgb(240, 240, 240)">
+      rgb(240, 240, 240)
+    </h1>
+  </body>
+</html>
