--- a/HTML CSS Javascript/Tables_Row_Hover.html
+++ b/HTML CSS Javascript/Tables_Row_Hover.html
@@ -25,7 +25,7 @@
         }
         tr {         
           background-color: rgb(101, 220, 236);
-          font-weight:bold;          
+          font-weight:bold;font-size: 30px;;          
         }
 
         /* Demonstration of the table hover handler. */
