--- a/HTML CSS Javascript/Tables.html
+++ b/HTML CSS Javascript/Tables.html
@@ -53,7 +53,7 @@
   
         tr {         
           background-color: darkgray;
-          font-weight:bold;
+          font-weight:bold;font-size: 30px;;
         }
 
         th {          
