--- a/HTML CSS Javascript/Tables_Border_Collapse.html
+++ b/HTML CSS Javascript/Tables_Border_Collapse.html
@@ -17,7 +17,7 @@
   
         tr {         
           background-color: rgb(101, 220, 236);
-          font-weight:bold;
+          font-weight:bold;font-size: 30px;;
         }
 
         th {          
