--- a/HTML CSS Javascript/Tables_Text_Color.html
+++ b/HTML CSS Javascript/Tables_Text_Color.html
@@ -25,7 +25,7 @@
         }
         tr {         
           background-color: rgb(151, 205, 212);
-          font-weight:bold; 
+          font-weight:bold;font-size: 30px;; 
           color :blue ;        
         }
 
