--- a/Git/Sample1/index.html
+++ b/Git/Sample1/index.html
@@ -1,171 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <title>Git Exercise Sample-Company - Customer</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="index.js"
+      language="javascript"
+      type="text/javascript"
+    ></script>
+  </head>
+  <body>
+    <div class="container-fluid p-5 bg-secondary text-white text-center">
+      <h1>Sample-Company - Git Session Customer List</h1>
+      <p>Demonstration of GIT Session</p>
+    </div>
 
-    <title>Git Exercise SXCompany - Customer</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="index.js" language="javascript" type="text/javascript"></script>
-</head>
-<body>
+    <!-- Margin top5-->
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-sm-4">
+          <h3>Registry</h3>
+          <p>Create Customer Registry</p>
+          <p>Here we will add customer registry related links.</p>
+        </div>
+        <div class="col-sm-4">
+          <h3>Transactions</h3>
+          <p>Customer Transactions</p>
+          <p>
+            All operations with Customer Transactions will be displayed here
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <h3>Survey</h3>
+          <p>Customer Survey</p>
+          <p>Customer will be able to fill-out a survey in this section</p>
+        </div>
+      </div>
+    </div>
 
-<div class="container-fluid p-5 bg-secondary text-white text-center">
-        <h1>SXCompany - Git Session Customer List</h1>
-        <p>Demonstration of GIT Session</p> 
-</div>
+    <div class="container mt-3">
+      <h2>Customers List</h2>
+      <p>The list of all customers</p>
 
-<!-- Margin top5-->
-<div class="container mt-5">
-  <div class="row">
-     <div class="col-sm-4">
-        <h3>Registry</h3>
-        <p>Create Customer Registry</p>
-        <p>Here we will add customer registry related links.</p>
-     </div>
-     <div class="col-sm-4">
-        <h3>Transactions</h3>
-        <p>Customer Transactions</p>
-        <p>All operations with Customer Transactions will be displayed here</p>
-     </div>
-     <div class="col-sm-4">
-        <h3>Survey</h3>        
-        <p>Customer Survey</p>
-        <p>Customer will be able to fill-out a survey in this section</p>
-     </div>
-  </div>
-</div>
+      <table
+        id="myTable"
+        cellspacing="1"
+        class="table table-light table-striped table-hover"
+      >
+        <thead>
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Age</th>
+            <th>Total</th>
+            <th>Discount</th>
+            <th>Difference</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr onclick="javascript:showRow(this);">
+            <td>Wolf</td>
+            <td>Collins</td>
+            <td>28</td>
+            <td>9.99</td>
+            <td>20.3%</td>
+            <td>+3</td>
+          </tr>
+          <tr onclick="javascript:showRow(this);">
+            <td>Dimitar</td>
+            <td>Collins</td>
+            <td>33</td>
+            <td>19.99</td>
+            <td>25.1%</td>
+            <td>-7</td>
+          </tr>
+          <tr onclick="javascript:showRow(this);">
+            <td>Halil</td>
+            <td>Collins</td>
+            <td>18</td>
+            <td>15.89</td>
+            <td>44.2%</td>
+            <td>-15</td>
+          </tr>
+          <tr onclick="javascript:showRow(this);">
+            <td>Samet</td>
+            <td>Collins</td>
+            <td>45</td>
+            <td>153.19</td>
+            <td>44%</td>
+            <td>+19</td>
+          </tr>
+          <tr onclick="javascript:showRow(this);">
+            <td>Robin</td>
+            <td>Collins</td>
+            <td>56</td>
+            <td>153.19</td>
+            <td>23%</td>
+            <td>+9</td>
+          </tr>
+          <tr onclick="javascript:showRow(this);">
+            <td>Irina</td>
+            <td>Collins</td>
+            <td>56</td>
+            <td>153.19</td>
+            <td>23%</td>
+            <td>+9</td>
+          </tr>
+          <tr onclick="javascript:showRow(this);">
+            <td>Nureleign</td>
+            <td>Collins</td>
+            <td>56</td>
+            <td>153.19</td>
+            <td>23%</td>
+            <td>+9</td>
+          </tr>
+          <tr onclick="javascript:showRow(this);">
+            <td>Selim</td>
+            <td>Collins</td>
+            <td>56</td>
+            <td>153.19</td>
+            <td>23%</td>
+            <td>+9</td>
+          </tr>
+          <tr onclick="javascript:showRow(this);">
+            <td>Samir</td>
+            <td>Collins</td>
+            <td>56</td>
+            <td>153.19</td>
+            <td>23%</td>
+            <td>+9</td>
+          </tr>
+          <tr onclick="javascript:showRow(this);">
+            <td>Jiyeon</td>
+            <td>Collins</td>
+            <td>56</td>
+            <td>153.19</td>
+            <td>23%</td>
+            <td>+9</td>
+          </tr>
+        </tbody>
+      </table>
 
-<div class="container mt-3">
-  <h2>Customers List</h2>
-  <p>The list of all customers</p>
+      <label style="display: inline-block; width: 100px" for="firstname"
+        >First name:</label
+      >
+      <input type="text" id="firstname" name="firstname" /><br />
 
-  <table id="myTable" cellspacing="1" class="table table-light table-striped table-hover">             
-    <thead>
-        <tr> 
-            <th>First Name</th> 
-            <th>Last Name</th> 
-            <th>Age</th> 
-            <th>Total</th> 
-            <th>Discount</th> 
-            <th>Difference</th> 
-        </tr> 
-    </thead> 
-    <tbody> 
-        <tr onclick="javascript:showRow(this);"> 
-            <td>Wolf</td> 
-            <td>Collins</td> 
-            <td>28</td> 
-            <td>9.99</td> 
-            <td>20.3%</td> 
-            <td>+3</td> 
-        </tr> 
-         <tr onclick="javascript:showRow(this);"> 
-            <td>Dimitar</td> 
-            <td>Collins</td> 
-            <td>33</td> 
-            <td>19.99</td> 
-            <td>25.1%</td> 
-            <td>-7</td> 
-        </tr> 
-         <tr onclick="javascript:showRow(this);"> 
-            <td>Halil</td> 
-            <td>Collins</td> 
-            <td>18</td> 
-            <td>15.89</td> 
-            <td>44.2%</td> 
-            <td>-15</td> 
-        </tr> 
-         <tr onclick="javascript:showRow(this);"> 
-            <td>Samet</td> 
-            <td>Collins</td> 
-            <td>45</td> 
-            <td>153.19</td> 
-            <td>44%</td> 
-            <td>+19</td> 
-        </tr> 
-        <tr onclick="javascript:showRow(this);"> 
-            <td>Robin</td> 
-            <td>Collins</td> 
-            <td>56</td> 
-            <td>153.19</td> 
-            <td>23%</td> 
-            <td>+9</td> 
-        </tr> 
-        <tr onclick="javascript:showRow(this);"> 
-            <td>Irina</td> 
-            <td>Collins</td> 
-            <td>56</td> 
-            <td>153.19</td> 
-            <td>23%</td> 
-            <td>+9</td> 
-        </tr> 
-        <tr onclick="javascript:showRow(this);"> 
-            <td>Nureleign</td> 
-            <td>Collins</td> 
-            <td>56</td> 
-            <td>153.19</td> 
-            <td>23%</td> 
-            <td>+9</td> 
-        </tr> 
-        <tr onclick="javascript:showRow(this);"> 
-            <td>Selim</td> 
-            <td>Collins</td> 
-            <td>56</td> 
-            <td>153.19</td> 
-            <td>23%</td> 
-            <td>+9</td> 
-        </tr> 
-        <tr onclick="javascript:showRow(this);"> 
-            <td>Samir</td> 
-            <td>Collins</td> 
-            <td>56</td> 
-            <td>153.19</td> 
-            <td>23%</td> 
-            <td>+9</td> 
-        </tr> 
-        <tr onclick="javascript:showRow(this);"> 
-            <td>Jiyeon</td> 
-            <td>Collins</td> 
-            <td>56</td> 
-            <td>153.19</td> 
-            <td>23%</td> 
-            <td>+9</td> 
-        </tr>
-    </tbody> 
-  </table>
+      <label style="display: inline-block; width: 100px" for="lastname"
+        >Last name:</label
+      >
+      <input type="text" id="lastname" name="lastname" /><br />
 
-    <label style="display:inline-block; width:100px" for="firstname">First name:</label>
-    <input type="text" id="firstname" name="firstname"><br>   
-    
-    <label style="display:inline-block; width:100px" for="lastname">Last name:</label>
-    <input type="text" id="lastname" name="lastname"><br> 
-   
-    <label style="display:inline-block; width:100px" for="age">Age:</label>
-    <input type="text" id="age" name="age"><br> 
-   
-    <label style="display:inline-block; width:100px" for="total">Total:</label>
-    <input type="text" id="total" name="total"><br>     
-   
-    <label style="display:inline-block; width:100px" for="discount">Discount:</label>
-    <input type="text" id="discount" name="discount"><br> 
-   
-    <label style="display:inline-block; width:100px" for="diff">Difference:</label>
-    <input type="text" id="diff" name="diff"><br> 
-    <br>
-    <br> 
+      <label style="display: inline-block; width: 100px" for="age">Age:</label>
+      <input type="text" id="age" name="age" /><br />
 
-    <footer class="text-center footer text-white">		
-		<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-			© 2022 Copyright:
-			<a class="text-white" href="https://www.clarusway.com/">www.clarusway.com</a>
-		</div>	
-	</footer>
+      <label style="display: inline-block; width: 100px" for="total"
+        >Total:</label
+      >
+      <input type="text" id="total" name="total" /><br />
 
-</div>
+      <label style="display: inline-block; width: 100px" for="discount"
+        >Discount:</label
+      >
+      <input type="text" id="discount" name="discount" /><br />
 
-</body>
+      <label style="display: inline-block; width: 100px" for="diff"
+        >Difference:</label
+      >
+      <input type="text" id="diff" name="diff" /><br />
+      <br />
+      <br />
+
+      <footer class="text-center footer text-white">
+        <div
+          class="text-center p-3"
+          style="background-color: rgba(0, 0, 0, 0.2)"
+        >
+          © 2023 Copyright:
+          <a class="text-white" href="https://www.clarusway.com/"
+            >www.clarusway.com</a
+          >
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
